Fix profile image - shift down to remove black edge

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -28,6 +28,7 @@
   height: 80px !important;
   border-radius: 50% !important;
   object-fit: cover !important;
+  object-position: center 55% !important;
   display: inline-block;
 }
 
